--- a/index.html
+++ b/index.html
@@ -3,9 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Taco_bar</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
+<div>
+<header>
+    <h1>Terry´s Taco Joint</h1>
+    <h4>Pretty Good Tacos!</h4>
+    </div>
+</header>
+</div>
+<div class="list list1">
+    <p class="fiyat">$1-99</p>
+    <p>Tacos</p>
+</div>
+<div class="list list2">
+    <p class="fiyat">$3.99</p>
+    <p>Kombucha</p>
+</div>
+<nav>
+    <ul class="menü">
+        <li><a href="">Tacos</a></li>
+        <li><a href="">Beers</a></li>
+        <li><a href="">Wines</a></li>
+        <li><a href="">Music</a></li>
+        <li><a href="">Reservations</a> </li>
+    </ul>
+</nav>
+<section>
+    <div>
+        <h3>Tacos</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, sint?</p>
+    </div>
+    <div>
+        <h3>Beer</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, ratione.</p>
+    </div>
+    <div>
+        <h3>Wine</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, debitis!</p>
+    </div>
+    <div>
+        <h3>Music</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, obcaecati.</p>
+    </div>
+</section>
+<section>
+    <img src="./assets/queso-taco.png" alt="">
+    <div class="learn">
+    <h2>Featured Taco</h2>
+    <p>Slim Profile,easy to hold and loaded with cheese.</p>
+    <p>This is the one you have been waiting for <button>Learn More</button></p>
+</div>
+</section>
+<section class="galery">
+    <h2>Instant Grams</h2>
+    <img src="./assets/istockphoto-1272879937-612x612.jpg" alt="">
+    <img src="./assets/istockphoto-1296517102-612x612.jpg" alt="">
+    <img src="./assets/istockphoto-1415862623-1024x1024.jpg" alt="">
+    <img src="./assets/istockphoto-1447127590-612x612.jpg" alt="">
+    <img src="./assets/istockphoto-1458782106-1024x1024.jpg" alt="">
+    <img src="./assets/istockphoto-1460151516-1024x1024.jpg" alt="">
+    <img src="./assets/istockphoto-1466767075-1024x1024.jpg" alt="">
+    <img src="./assets/istockphoto-1470158140-612x612.jpg" alt="">
+    <img src="./assets/istockphoto-808022474-1024x1024.jpg" alt="">
+</section>
+
 <body>
     
 </body>
